[gd_scene load_steps=10 format=2]

[ext_resource path="res://Battle Engine/BattleBox/boxup.png" type="Texture" id=1]
[ext_resource path="res://Battle Engine/BattleBox/Battle Box.gd" type="Script" id=2]
[ext_resource path="res://Battle Engine/BattleBox/box.png" type="Texture" id=4]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.994536, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.5, 2.5 )

[node name="Battle Box" type="KinematicBody2D"]
position = Vector2( 320, 240 )
script = ExtResource( 2 )

[node name="BlackBackground" type="Sprite" parent="."]
z_as_relative = false
texture = SubResource( 6 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( -0.5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -8.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="LeftWall"]
position = Vector2( -2.5, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="UpWall" type="StaticBody2D" parent="."]
position = Vector2( 0, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpWall"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="UpWall"]
position = Vector2( 0, -2.5 )
texture = ExtResource( 1 )

[node name="DownWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownWall"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="DownWall"]
position = Vector2( 0, 2.5 )
texture = ExtResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 0.5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 8.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RightWall"]
position = Vector2( 2.5, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 3 )
disabled = true

[node name="UpRight Corner" type="KinematicBody2D" parent="."]
position = Vector2( -3, -3 )

[node name="UpRight Corner3" type="Sprite" parent="UpRight Corner"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpRight Corner"]
shape = SubResource( 4 )

[node name="UpLeft Corner" type="KinematicBody2D" parent="."]
position = Vector2( 3, -3 )

[node name="UpLeft Corner3" type="Sprite" parent="UpLeft Corner"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpLeft Corner"]
shape = SubResource( 4 )

[node name="DownRight Corner" type="KinematicBody2D" parent="."]
position = Vector2( 3, 3 )

[node name="DownRight Corner3" type="Sprite" parent="DownRight Corner"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownRight Corner"]
shape = SubResource( 4 )

[node name="DownLeft Corner" type="KinematicBody2D" parent="."]
position = Vector2( -3, 3 )

[node name="DownLeft Corner3" type="Sprite" parent="DownLeft Corner"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownLeft Corner"]
shape = SubResource( 4 )
